# iced-box

./: CONTRIBUTING.md  Cargo.toml  README.md
examples/icons/: Cargo.toml  README.md
examples/icons/src/: main.rs
examples/toasts/: Cargo.toml  README.md
examples/toasts/src/: main.rs
icon/: Cargo.toml
icon/src/: lib.rs  lucide.rs
icons/lucide/: Cargo.toml
icons/lucide/src/: lib.rs  lucide.rs
icons/material/: Cargo.toml
icons/material/src/: material.rs
src/: lib.rs
src/icon/: lucide.rs  material.rs  mod.rs
src/icons/: mod.rs
src/icons/lucide/: lucide.rs
src/icons/material/: material.rs
src/toast/: helpers.rs  manager.rs  mod.rs  overlay.rs  status.rs  styles.rs
src/toasts/: helpers.rs  mod.rs
widget/: Cargo.toml
