[package]
name = "iced-box"
description = "A utility box for iced.rs"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true


[workspace.package]
version = "0.4.0"
authors = ["Cosmo André <soucosmomoraes@gmail.com>"]
edition = "2021"
repository = "https://github.com/iced-box/iced-box"
categories = ["gui"]
keywords = ["gui", "ui", "graphics", "interface", "widgets"]
license = "GPL-3.0-only"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "icons/*",
    "widget",
    "examples/*",
]

[workspace.dependencies]
iced = { version = "0.10", default-features = false }
iced-box = { path = "." }
icons_lucide = { path = "icons/lucide" }
icons_material = { path = "icons/material" }

[dependencies]
iced.workspace = true
#iced-box.workspace = true
icons_lucide.workspace = true
icons_material.workspace = true

[features]
icon = []
lucide_icons = ["icon"]
material_icons = ["icon"]

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
all-features = true

[workspace.lints.rustdoc]
broken_intra_doc_links = "forbid"
