[package]
name = "iced-box"
description = "A utility box for iced.rs"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true


[workspace.package]
version = "0.5.0"
authors = ["Cosmo André <soucosmomoraes@gmail.com>"]
edition = "2021"
repository = "https://github.com/iced-box/iced-box"
categories = ["gui"]
keywords = ["gui", "ui", "graphics", "interface", "widgets"]
license = "GPL-3.0-only"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    #"widget",
    "examples/*",
]

[workspace.dependencies]
iced = {  git = "https://github.com/iced-rs/iced.git", rev = "663a081bdd507da0b5ca7d4dc30d78a20b4618af", default-features = false, features = ["advanced"] }
iced-box = { path = "." }

[dependencies]
iced.workspace = true


[features]
icon = []
lucide_icons = ["icon"]
material_icons = ["icon"]

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
all-features = true

[workspace.lints.rustdoc]
broken_intra_doc_links = "forbid"
