[package]
name = "icons-example"
version = "0.1.0"
authors = ["Cosmo André <soucosmomoraes@gmail.com>"]
license = "GPL-3.0-only"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced.workspace = true
iced-box = { workspace = true, features = ["material_icons", "lucide_icons"] }
