[package]
name = "icons_lucide"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { workspace = true }